--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,29 +8,16 @@ html(lang="en")
 
     body 
         header
-            h1 Chitty Chatty
+            h1 VideoCall
         main 
-            div#welcome
-                form
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms :
-                ul 
-                
-            div#room
-                h3
-                ul
-                form#name
-                    input(placeholder="nickname", required, type="text")
-                    button Save 
-
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send 
-
+            div#myStream
+                video#myFace(autoplay, playsinline, width="400", height="400")
+                button#mute Mute
+                button#camera Turn Camera Off
+                select#cameras 
 
         script(src="/socket.io/socket.io.js") // socket.io 를 브라우저에 설치
-        script(src="/public/js/app2.js")
+        script(src="/public/js/vidCall.js")
          
 
 
