--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,11 +10,17 @@ html(lang="en")
         header
             h1 VideoCall
         main 
-            div#myStream
-                video#myFace(autoplay, playsinline, width="400", height="400")
-                button#mute Mute
-                button#camera Turn Camera Off
-                select#cameras 
+            div#welcome
+                form
+                    input(type="text" placeholder="room name", required)
+                    button Enter Room
+
+            div#call
+                div#myStream
+                    video#myFace(autoplay, playsinline, width="400", height="400")
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras 
 
         script(src="/socket.io/socket.io.js") // socket.io 를 브라우저에 설치
         script(src="/public/js/vidCall.js")
