add peer's video

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -22,6 +22,9 @@ html(lang="en")
                     button#camera Turn Camera Off
                     select#cameras 
 
+                video#peerFace(autoplay, playsinline, width="400", height="400")
+
+
         script(src="/socket.io/socket.io.js") // socket.io 를 브라우저에 설치
         script(src="/public/js/vidCall.js")
          
